--- a/295B-WebModule/DataAnalyzer/pom.xml
+++ b/295B-WebModule/DataAnalyzer/pom.xml
@@ -82,7 +82,13 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+		
 		<!-- @Inject -->
 		<dependency>
 			<groupId>javax.inject</groupId>
