--- a/295B-WebModule/DataAnalyzer/pom.xml
+++ b/295B-WebModule/DataAnalyzer/pom.xml
@@ -89,6 +89,13 @@
 			<version>2.9.1</version>
 		</dependency>
 		
+		<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20150729</version>
+</dependency>
+		
+		
 		<!-- @Inject -->
 		<dependency>
 			<groupId>javax.inject</groupId>
